# swc

./: .gitignore  package.json
.github/bot/src/: nightly-version.ts
.github/workflows/: CI.yml  bench.yml  publish-core.yml  publish-node.yml  publish-npm-package.yml  publish.yml
bindings/: Cargo.toml
bindings/binding_core_node/: Cargo.toml
bindings/binding_core_wasm/: Cargo.toml
bindings/binding_core_wasm/src/: types.rs
bindings/binding_minifier_wasm/src/: types.rs
bindings/swc_cli/: Cargo.toml
bindings/swc_cli/src/commands/: plugin.rs
crates/swc/src/: builder.rs  lib.rs
crates/swc/src/config/: mod.rs
crates/swc/tests/: exec.rs  reflame.rs  simple.rs
crates/swc_common/src/: source_map.rs
crates/swc_ecma_loader/src/resolvers/: tsc.rs
crates/swc_ecma_loader/tests/: tsc_resolver.rs
crates/swc_ecma_quote_macros/src/: builder.rs  ctxt.rs
crates/swc_ecma_quote_macros/src/ast/: enums.rs  id.rs  lit.rs  mod.rs
crates/swc_ecma_transforms/: Cargo.toml
crates/swc_ecma_transforms/src/: lib.rs
crates/swc_ecma_transforms_module/src/: path.rs
crates/swc_ecma_transforms_module/tests/: path_node.rs
crates/swc_ecma_transforms_module/tests/paths/reflame/input/: config.json  index.ts
crates/swc_ecma_transforms_module/tests/paths/reflame/output/: index.ts
crates/swc_ecma_transforms_react/: Cargo.toml
crates/swc_ecma_transforms_react/src/: lib.rs
crates/swc_ecma_transforms_react/src/jsx/: mod.rs
crates/swc_ecma_transforms_react/src/refresh_setup/: mod.rs  tests.rs
crates/swc_ecma_transforms_react/src/remove_test_exports/: mod.rs  tests.rs
crates/swc_ecma_transforms_react/src/rewrite_relative_imports/: mod.rs  tests.rs
crates/swc_ecma_transforms_react/tests/__swc_snapshots__/src/refresh_setup/tests.rs/: disabled.js
crates/swc_ecma_transforms_react/tests/__swc_snapshots__/src/rewrite_relative_imports/tests.rs/: disabled.js
crates/swc_ecma_transforms_reflame/: Cargo.toml
crates/swc_ecma_transforms_reflame/src/: lib.rs
crates/swc_ecma_transforms_reflame/src/refresh_setup/: mod.rs  tests.rs
crates/swc_ecma_transforms_reflame/src/remove_test_exports/: mod.rs  tests.rs
crates/swc_ecma_transforms_reflame/src/rewrite_relative_imports/: mod.rs  tests.rs
crates/swc_ecma_transforms_reflame/tests/__swc_snapshots__/src/refresh_setup/tests.rs/: basic_sample.js
crates/swc_ecma_transforms_reflame/tests/__swc_snapshots__/src/remove_test_exports/tests.rs/: basic_sample.js
crates/swc_ecma_transforms_reflame/tests/__swc_snapshots__/src/rewrite_relative_imports/tests.rs/: basic_sample.js
crates/swc_plugin_runner/tests/fixture/swc_internal_plugin/: Cargo.toml
node-swc/__tests__/env/: env_test.js
node-swc/__tests__/transform/: preset-env_test.mjs  reflame_test.mjs
node-swc/e2e/plugins/: plugins.schema.test.js
node-swc/src/: binding.js  run_swcx.ts  types.ts
scripts/npm/darwin-arm64/: package.json
scripts/npm/darwin-x64/: package.json
scripts/npm/linux-arm-gnueabihf/: package.json
scripts/npm/linux-arm64-gnu/: package.json
scripts/npm/linux-arm64-musl/: package.json
scripts/npm/linux-x64-gnu/: package.json
scripts/npm/linux-x64-musl/: package.json
scripts/npm/win32-arm64-msvc/: package.json
scripts/npm/win32-ia32-msvc/: package.json
scripts/npm/win32-x64-msvc/: package.json
