[workspace]
members = [
  "binding_core_node",
  "binding_core_wasm",
  "binding_minifier_node",
  "binding_minifier_wasm",
  "binding_typescript_wasm",
  "swc_cli",
]
resolver = "2"

  [workspace.dependencies]
  anyhow               = "1.0.86"
  backtrace            = "0.3"
  getrandom            = "0.2.15"
  napi                 = { version = "2", default-features = false }
  napi-build           = "2"
  napi-derive          = { version = "2", default-features = false }
  path-clean           = "1.0"
  quote                = "1"
  serde                = "1"
  serde-wasm-bindgen   = "0.6.5"
  serde_json           = "1.0.120"
  sourcemap            = "8.0.1"
  swc_cli_impl         = { version = "0.18.0", path = "../crates/swc_cli_impl" }
  swc_common           = { version = "0.37.0", path = "../crates/swc_common" }
  swc_compiler_base    = { version = "0.16.0", path = "../crates/swc_compiler_base" }
  swc_config           = { path = "../crates/swc_config" }
  swc_core             = { version = "0.100.1", path = "../crates/swc_core" }
  swc_error_reporters  = { version = "0.21.0", path = "../crates/swc_error_reporters" }
  swc_fast_ts_strip    = { version = "0.5.0", path = "../crates/swc_fast_ts_strip" }
  swc_malloc           = { version = "0.5.11", path = "../crates/swc_malloc" }
  swc_nodejs_common    = { version = "0.0.8", path = "../crates/swc_nodejs_common" }
  tracing              = "0.1.40"
  tracing-chrome       = "0.7.2"
  tracing-futures      = "0.2.5"
  tracing-subscriber   = "0.3.18"
  wasm-bindgen         = "0.2.92"
  wasm-bindgen-futures = "0.4.42"

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
# lto = "fat"

# debug = true
# opt-level = 'z'

# Strip debug symbols
strip = "symbols"


[profile.dev.package."*"]
debug-assertions = false
