[workspace]

[package]
edition = "2021"
name    = "swc_internal_plugin"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
swc_common = { path = "../../../../swc_common" }
swc_core = { path = "../../../../swc_core", features = [
  "plugin_transform",
  "ecma_quote",
] }
swc_ecma_ast = { path = "../../../../swc_ecma_ast" }
